# MassParallel

./: .gitignore  4.txt  chapter_04.md
02_chapter/: CMakeLists.txt
02_chapter/cpu/: CMakeLists.txt  main.c
02_chapter/gpu/: CMakeLists.txt  main.cu
02_vector_add/: CMakeLists.txt
02_vector_add/src/: CMakeLists.txt  main.c  main.cu
02_vector_add/vector/: CMakeLists.txt  vector.c  vector.cu  vector.h
03_chapter/: CMakeLists.txt
03_chapter/blur/: CMakeLists.txt
03_chapter/blur/picture/: bmp_image.c  bmp_image.cu  bmp_image.h
03_chapter/blur/src/: CMakeLists.txt  main.c  main.cu
03_chapter/bmplib/: bmplib.h
03_chapter/color_to_gray/: CMakeLists.txt  build.sh
03_chapter/color_to_gray/picture/: CMakeLists.txt  bmp_image.c  bmp_image.cu  bmp_image.h
03_chapter/color_to_gray/src/: CMakeLists.txt  main.c  main.cu
03_chapter/cpu/: main.c
03_chapter/gpu/: main.cu
03_chapter/matrix_mul/: CMakeLists.txt  build.sh
03_chapter/matrix_mul/src/: common.h  main.c  main.cu
04_chapter/: CMakeLists.txt
04_chapter/src/: main.cu  main_gpu_props.cu
conspects/: 04_Compute_Architecture.md  05_Memory_Architecture.md  chapter_04.md
docs/: 00_Preface
docs/01_chap/: 01_intro
docs/02_chap/: 02_Heterogeneous_data_parallel_computing
